--- a/app/src/main/res/layout/notifictaion_recording.xml
+++ b/app/src/main/res/layout/notifictaion_recording.xml
@@ -8,6 +8,7 @@
     tools:context=".activities.RecordingActivity">
 
     <ImageView
+        android:padding="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -15,10 +16,12 @@
         android:backgroundTint="@color/colorAccent" />
 
     <TextView
+        android:gravity="center"
+        android:id="@+id/notification_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:layout_height="match_parent"
         android:text="Recording"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+        android:textColor="@android:color/black"
+        android:textSize="20dp" />
 </LinearLayout>
