--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -22,7 +22,7 @@
         android:key="encoding"
         android:negativeButtonText="@null"
         android:positiveButtonText="@null"
-        android:summary="Output file formats (.wav, .aac, ...)"
+        android:summary="Output file formats (.wav, .m4a, ...)"
         android:title="Encoding" />
 
     <SwitchPreference
