--- a/app/src/main/res/layout/recording.xml
+++ b/app/src/main/res/layout/recording.xml
@@ -4,10 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".activities.RecordingActivity">
 
     <com.github.axet.audiorecorder.widgets.EqualLinearLayout
@@ -21,14 +17,18 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/recording_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"
-                android:text="2016-02-01.wav" />
+                android:padding="5dp"
+                android:text="2016-02-01.wav"
+                android:textSize="20dp" />
 
             <TextView
+                android:id="@+id/recording_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="5dp"
                 android:text="2016 02 01" />
         </LinearLayout>
 
@@ -39,13 +39,17 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/recording_duration"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="5dp"
                 android:text="00:05" />
 
             <TextView
+                android:id="@+id/recording_size"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="5dp"
                 android:text="0.1 MB" />
         </LinearLayout>
     </com.github.axet.audiorecorder.widgets.EqualLinearLayout>
@@ -54,24 +58,72 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.github.axet.audiorecorder.widgets.EqualLinearLayout
-            android:id="@+id/recording_detail"
+        <LinearLayout
+            android:id="@+id/recording_player"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:background="#dedede"
+            android:orientation="vertical"
+            android:padding="5dp">
 
-            <ImageView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/play"
-                android:backgroundTint="@color/colorAccent" />
+                android:gravity="center"
+                android:orientation="horizontal">
 
-            <ImageView
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/recording_player_start"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="01:01" />
+
+                <SeekBar
+                    android:id="@+id/recording_player_seek"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="5dp"
+                    android:progress="60" />
+
+                <TextView
+                    android:id="@+id/recording_player_end"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="01:01" />
+
+            </LinearLayout>
+
+            <com.github.axet.audiorecorder.widgets.EqualLinearLayout
+                android:id="@+id/recording_detail"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/trash"
-                android:backgroundTint="@color/colorAccent" />
-        </com.github.axet.audiorecorder.widgets.EqualLinearLayout>
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/recording_player_play"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/play"
+                    android:backgroundTint="@color/colorAccent" />
+
+                <ImageView
+                    android:id="@+id/recording_player_share"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/share"
+                    android:backgroundTint="@color/colorAccent" />
+
+                <ImageView
+                    android:id="@+id/recording_player_trash"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/trash"
+                    android:backgroundTint="@color/colorAccent" />
+            </com.github.axet.audiorecorder.widgets.EqualLinearLayout>
+        </LinearLayout>
     </FrameLayout>
 
 </LinearLayout>
