--- a/app/src/main/res/layout/notifictaion_recording.xml
+++ b/app/src/main/res/layout/notifictaion_recording.xml
@@ -1,27 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/notification_base"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/status_bar_latest_event_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    tools:context=".activities.RecordingActivity">
+    android:layout_height="64dp">
 
     <ImageView
-        android:padding="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_width="@dimen/notification_large_icon_width"
+        android:layout_height="@dimen/notification_large_icon_height"
         android:background="@drawable/ic_mic_24dp"
-        android:backgroundTint="@color/colorAccent" />
+        android:backgroundTint="@android:color/black" />
 
-    <TextView
-        android:gravity="center"
-        android:id="@+id/notification_text"
-        android:layout_width="wrap_content"
-        android:layout_weight="1"
+    <LinearLayout
+        android:id="@+id/notification_main_column"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Recording"
-        android:textColor="@android:color/black"
-        android:textSize="20dp" />
-</LinearLayout>
+        android:layout_gravity="top"
+        android:layout_marginLeft="@dimen/notification_large_icon_width"
+        android:layout_marginStart="@dimen/notification_large_icon_width"
+        android:layout_marginTop="5dp"
+        android:minHeight="@dimen/notification_large_icon_height"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/notification_title"
+                style="@style/AlertDialog.AppCompat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Audio Recorder"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:id="@+id/notification_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Audio Recorder"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="@dimen/notification_subtext_size" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/notification_pause"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/pause" />
+
+        </LinearLayout>
+    </LinearLayout>
+</FrameLayout>
+
+
