--- a/app/src/main/res/layout/notifictaion_recording.xml
+++ b/app/src/main/res/layout/notifictaion_recording.xml
@@ -2,13 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/status_bar_latest_event_content"
     android:layout_width="match_parent"
-    android:layout_height="64dp">
+    android:layout_height="64dp"
+    android:background="@android:color/white">
 
     <ImageView
         android:layout_width="@dimen/notification_large_icon_width"
         android:layout_height="@dimen/notification_large_icon_height"
-        android:background="@drawable/ic_mic_24dp"
-        android:backgroundTint="@android:color/black" />
+        android:src="@drawable/ic_mic_24dp"
+        android:tint="@android:color/black" />
 
     <LinearLayout
         android:id="@+id/notification_main_column"
@@ -55,9 +56,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/pause" />
-
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
-
-
