--- a/app/src/main/res/layout/recording.xml
+++ b/app/src/main/res/layout/recording.xml
@@ -112,25 +112,22 @@
                         android:id="@+id/recording_player_play"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/play"
-                        android:backgroundTint="@color/colorAccent"
-                        android:padding="20dp" />
+                        android:src="@drawable/play"
+                        android:tint="@color/colorAccent" />
 
                     <ImageView
                         android:id="@+id/recording_player_share"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/share"
-                        android:backgroundTint="@color/colorAccent"
-                        android:padding="20dp" />
+                        android:src="@drawable/share"
+                        android:tint="@color/colorAccent" />
 
                     <ImageView
                         android:id="@+id/recording_player_trash"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/trash"
-                        android:backgroundTint="@color/colorAccent"
-                        android:padding="20dp" />
+                        android:src="@drawable/trash"
+                        android:tint="@color/colorAccent" />
                 </com.github.axet.audiorecorder.widgets.EqualLinearLayout>
             </LinearLayout>
         </FrameLayout>
