--- a/app/src/main/res/layout/notifictaion_recording.xml
+++ b/app/src/main/res/layout/notifictaion_recording.xml
@@ -3,13 +3,13 @@
     android:id="@+id/status_bar_latest_event_content"
     android:layout_width="match_parent"
     android:layout_height="64dp"
-    android:background="@android:color/white">
+    android:background="?android:windowBackground">
 
     <ImageView
         android:layout_width="@dimen/notification_large_icon_width"
         android:layout_height="@dimen/notification_large_icon_height"
         android:src="@drawable/ic_mic_24dp"
-        android:tint="@android:color/black" />
+        android:tint="?android:attr/colorForeground" />
 
     <LinearLayout
         android:id="@+id/notification_main_column"
@@ -30,18 +30,17 @@
 
             <TextView
                 android:id="@+id/notification_title"
-                style="@style/AlertDialog.AppCompat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Audio Recorder"
-                android:textColor="@android:color/black" />
+                android:textColor="?android:attr/colorForeground" />
 
             <TextView
                 android:id="@+id/notification_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Audio Recorder"
-                android:textColor="@android:color/darker_gray"
+                android:textColor="?android:attr/textColorHint"
                 android:textSize="@dimen/notification_subtext_size" />
 
         </LinearLayout>
