--- a/app/src/main/res/layout/recording.xml
+++ b/app/src/main/res/layout/recording.xml
@@ -70,8 +70,8 @@
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:background="#dedede"
                 android:orientation="vertical"
+                android:background="?attr/secondBackground"
                 android:padding="5dp">
 
                 <LinearLayout
@@ -81,6 +81,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:textColor="?android:textColorSecondary"
                         android:id="@+id/recording_player_start"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -113,21 +114,21 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/play"
-                        android:tint="@color/colorAccent" />
+                        android:tint="?attr/colorAccent" />
 
                     <ImageView
                         android:id="@+id/recording_player_share"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/share"
-                        android:tint="@color/colorAccent" />
+                        android:tint="?attr/colorAccent" />
 
                     <ImageView
                         android:id="@+id/recording_player_trash"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/trash"
-                        android:tint="@color/colorAccent" />
+                        android:tint="?attr/colorAccent" />
                 </com.github.axet.androidlibrary.widgets.EqualLinearLayout>
             </LinearLayout>
         </FrameLayout>
