--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,4 +1,5 @@
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <com.github.axet.androidlibrary.widgets.StoragePathPreference
         android:defaultValue="Audio Recorder"
         android:key="storage_path"
@@ -36,5 +37,15 @@
         android:key="silence"
         android:summary="Put phone in 'silence mode' during recording"
         android:title="Silence mode" />
+
+    <ListPreference
+        android:defaultValue="Theme_White"
+        android:entries="@array/themes"
+        android:entryValues="@array/themes_values"
+        android:key="theme"
+        android:negativeButtonText="@null"
+        android:positiveButtonText="@null"
+        android:summary="Set application theme (dark / light)"
+        android:title="Application Theme" />
 
 </PreferenceScreen>
