--- a/app/src/main/res/layout/recording.xml
+++ b/app/src/main/res/layout/recording.xml
@@ -70,8 +70,8 @@
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:orientation="vertical"
                 android:background="?attr/secondBackground"
+                android:orientation="vertical"
                 android:padding="5dp">
 
                 <LinearLayout
@@ -81,11 +81,11 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:textColor="?android:textColorSecondary"
                         android:id="@+id/recording_player_start"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="01:01" />
+                        android:text="01:01"
+                        android:textColor="?android:textColorSecondary" />
 
                     <SeekBar
                         android:id="@+id/recording_player_seek"
