--- a/app/src/main/res/layout/recording.xml
+++ b/app/src/main/res/layout/recording.xml
@@ -26,6 +26,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="5dp"
+                    android:textColor="?attr/colorPrimary"
                     android:text="2016-02-01.wav"
                     android:textSize="20dp" />
 
