--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="secondBackground">#33333333</color>
+    <color name="colorAccentLight">#FF4081</color>
+    <color name="colorAccentDark">#a4a4a4</color>
 </resources>
