--- a/app/src/main/res/layout/recording.xml
+++ b/app/src/main/res/layout/recording.xml
@@ -32,7 +32,7 @@
                         android:layout_height="wrap_content"
                         android:padding="5dp"
                         android:text="2016-02-01.wav"
-                        android:textColor="?attr/colorPrimary"
+                        android:textColor="?attr/titleColor"
                         android:textSize="20dp" />
                 </com.github.axet.androidlibrary.widgets.PathMax>
 
